Agregando al archivo index tanto las etiquetas metas, title, agregando bootstrap icons, cambiando el navbar responsive y dando estilos con bootstrap

--- a/index.html
+++ b/index.html
@@ -2,10 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+     <!--metadatos  -->
+     <meta name="author" content="Elizabeth Chillcce" />
+     <meta name="description" content="Portafolio de desarrollo web de Elizabeth Chillcce" />
+     <meta name="keywords" content="React, JavaScript, CSS, HTML, Bootstrap" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <title>Vite + React</title>
+    <!-- link de bootstrap iconos -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+    <!-- Título -->
+    <title>Elizabeth Chillcce - Desarrollo web Fron-End</title>
+    <!-- Favicon -->
+    <link rel="icon"  type="image/x-icon" href="./src/components/Images/icono.png">
   </head>
   <body>
     <div id="root"></div>
